[package]
name = "trxtorturer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
reqwest = { version = "0.11.20", features = ["json", "rustls-tls-manual-roots", "blocking"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
